[package]
authors = ['MXC Foundation GmbH <https://t.me/mxcfoundation>', 'Luke Schoen <luke@mxc.org>', 'Ilya Beregovskiy <ilya@mxc.org>']
edition = '2018'
homepage = 'http://www.datahighway.com/'
license = 'GPL-3'
name = 'datahighway-runtime'
version = '1.1.0'
repository = 'https://github.com/DataHighway-DHX/node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies]
roaming-operators = { default_features = false, package = 'roaming-operators', path = '../pallets/roaming/roaming-operators' }
roaming-networks = { default_features = false, package = 'roaming-networks', path = '../pallets/roaming/roaming-networks' }
roaming-organizations = { default_features = false, package = 'roaming-organizations', path = '../pallets/roaming/roaming-organizations' }
roaming-network-servers = { default_features = false, package = 'roaming-network-servers', path = '../pallets/roaming/roaming-network-servers' }
roaming-devices = { default_features = false, package = 'roaming-devices', path = '../pallets/roaming/roaming-devices' }
roaming-routing-profiles = { default_features = false, package = 'roaming-routing-profiles', path = '../pallets/roaming/roaming-routing-profiles' }
roaming-service-profiles = { default_features = false, package = 'roaming-service-profiles', path = '../pallets/roaming/roaming-service-profiles' }
roaming-accounting-policies = { default_features = false, package = 'roaming-accounting-policies', path = '../pallets/roaming/roaming-accounting-policies' }
roaming-agreement-policies = { default_features = false, package = 'roaming-agreement-policies', path = '../pallets/roaming/roaming-agreement-policies' }
roaming-network-profiles = { default_features = false, package = 'roaming-network-profiles', path = '../pallets/roaming/roaming-network-profiles' }
roaming-device-profiles = { default_features = false, package = 'roaming-device-profiles', path = '../pallets/roaming/roaming-device-profiles' }
roaming-sessions = { default_features = false, package = 'roaming-sessions', path = '../pallets/roaming/roaming-sessions' }
roaming-billing-policies = { default_features = false, package = 'roaming-billing-policies', path = '../pallets/roaming/roaming-billing-policies' }
roaming-charging-policies = { default_features = false, package = 'roaming-charging-policies', path = '../pallets/roaming/roaming-charging-policies' }
roaming-packet-bundles = { default_features = false, package = 'roaming-packet-bundles', path = '../pallets/roaming/roaming-packet-bundles' }
membership-supernodes = { default_features = false, package = 'membership-supernodes', path = '../pallets/membership/supernodes' }
mining-setting-token = { default-features = false, package = 'mining-setting-token', path = '../pallets/mining/setting/token' }
mining-setting-hardware = { default-features = false, package = 'mining-setting-hardware', path = '../pallets/mining/setting/hardware' }
mining-rates-token = { default-features = false, package = 'mining-rates-token', path = '../pallets/mining/rates/token' }
mining-rates-hardware = { default-features = false, package = 'mining-rates-hardware', path = '../pallets/mining/rates/hardware' }
mining-sampling-token = { default-features = false, package = 'mining-sampling-token', path = '../pallets/mining/sampling/token' }
mining-sampling-hardware = { default-features = false, package = 'mining-sampling-hardware', path = '../pallets/mining/sampling/hardware' }
mining-eligibility-token = { default-features = false, package = 'mining-eligibility-token', path = '../pallets/mining/eligibility/token' }
mining-eligibility-hardware = { default-features = false, package = 'mining-eligibility-hardware', path = '../pallets/mining/eligibility/hardware' }
mining-eligibility-proxy = { default_features = false, package = 'mining-eligibility-proxy', path = '../pallets/mining/eligibility/proxy' }
mining-claims-token = { default-features = false, package = 'mining-claims-token', path = '../pallets/mining/claims/token' }
mining-claims-hardware = { default-features = false, package = 'mining-claims-hardware', path = '../pallets/mining/claims/hardware' }
mining-execution-token = { default-features = false, package = 'mining-execution-token', path = '../pallets/mining/execution/token' }
exchange-rate = { default-features = false, package = 'exchange-rate', path = '../pallets/exchange-rate' }
module-primitives = { default-features = false, path = '../pallets/primitives' }
funty = { default-features = false, version = '=1.1.0' }
chrono = { version = '0.4.19', default_features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true
branch = "polkadot-v0.9.9"

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true
branch = "polkadot-v0.9.9"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.parachain-info]
default-features = false
git = 'https://github.com/paritytech/cumulus'
branch = "polkadot-v0.9.9"


# Cumulus dependencies
[dependencies.cumulus-pallet-aura-ext]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.cumulus-pallet-parachain-system]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.cumulus-pallet-dmp-queue]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.cumulus-primitives-utility]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.cumulus-primitives-timestamp]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.cumulus-pallet-xcm]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.cumulus-pallet-xcmp-queue]
git = 'https://github.com/paritytech/cumulus.git'
branch = "polkadot-v0.9.9"
default-features = false

# Polkadot dependencies
[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = "release-v0.9.9"
default-features = false

[dependencies.xcm]
git = "https://github.com/paritytech/polkadot"
branch = "release-v0.9.9"
default-features = false

[dependencies.xcm-builder]
git = "https://github.com/paritytech/polkadot"
branch = "release-v0.9.9"
default-features = false

[dependencies.xcm-executor]
git = "https://github.com/paritytech/polkadot"
branch = "release-v0.9.9"
default-features = false

[dependencies.pallet-xcm]
git = "https://github.com/paritytech/polkadot"
branch = "release-v0.9.9"
default-features = false

[dependencies.pallet-aura]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.9"
default-features = false

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-indices]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-membership]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-session]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-staking]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/paritytech/substrate'
branch = "polkadot-v0.9.9"

[features]
default = ['std']
runtime-benchmarks = [
    'sp-runtime/runtime-benchmarks',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'hex-literal',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
]
std = [
    'chrono/std',
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
    'pallet-indices/std',
    'pallet-collective/std',
    'pallet-membership/std',
    'pallet-treasury/std',
    'pallet-staking/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
	"parachain-info/std",
    'cumulus-pallet-aura-ext/std',
    'cumulus-pallet-parachain-system/std',
    'cumulus-pallet-xcmp-queue/std',
    'cumulus-pallet-xcm/std',
    'cumulus-primitives-core/std',
    'cumulus-primitives-timestamp/std',
    'cumulus-primitives-utility/std',
    'xcm/std',
    'xcm-builder/std',
    'xcm-executor/std',
    'pallet-aura/std',
    'sp-consensus-aura/std',
]
