[package]
authors = ['MXC Foundation gGmbH <https://t.me/mxcfoundation>', 'Luke Schoen <luke@mxc.org>', 'Ilya Beregovskiy <ilya@mxc.org>']
edition = '2018'
name = 'datahighway-runtime'
version = '3.0.6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]

# third-party dependencies
codec = { version = '2.3.1', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
chrono = { version = '0.4.19', default_features = false }
log = { version = '0.4.14', default-features = false }
serde = { version = '1.0.126', optional = true, features = ['derive'] }
static_assertions = '1.1.0'

# primitives
sp-authority-discovery = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-transaction-storage-proof = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-npos-elections = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
module-primitives = { default-features = false, path = '../pallets/primitives' }

# frame dependencies
frame-executive = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-aura = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-authority-discovery = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-bags-list = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-bounties = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-child-bounties = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-collective = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-democracy = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-elections-phragmen = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-election-provider-multi-phase = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-identity = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-im-online = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-indices = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-membership = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-multisig = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-offences = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false, features = ['historical'] }
pallet-staking = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-tips = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
pallet-utility = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }

# custom pallets

# env = { version = '1.0.0', default-features = false, package = 'env', path = '../pallets/env'}
roaming-operators = { default-features = false, package = 'roaming-operators', path = '../pallets/roaming/roaming-operators' }
roaming-networks = { default-features = false, package = 'roaming-networks', path = '../pallets/roaming/roaming-networks' }
roaming-organizations = { default-features = false, package = 'roaming-organizations', path = '../pallets/roaming/roaming-organizations' }
roaming-network-servers = { default-features = false, package = 'roaming-network-servers', path = '../pallets/roaming/roaming-network-servers' }
roaming-devices = { default-features = false, package = 'roaming-devices', path = '../pallets/roaming/roaming-devices' }
roaming-routing-profiles = { default-features = false, package = 'roaming-routing-profiles', path = '../pallets/roaming/roaming-routing-profiles' }
roaming-service-profiles = { default-features = false, package = 'roaming-service-profiles', path = '../pallets/roaming/roaming-service-profiles' }
roaming-accounting-policies = { default-features = false, package = 'roaming-accounting-policies', path = '../pallets/roaming/roaming-accounting-policies' }
roaming-agreement-policies = { default-features = false, package = 'roaming-agreement-policies', path = '../pallets/roaming/roaming-agreement-policies' }
roaming-network-profiles = { default-features = false, package = 'roaming-network-profiles', path = '../pallets/roaming/roaming-network-profiles' }
roaming-device-profiles = { default-features = false, package = 'roaming-device-profiles', path = '../pallets/roaming/roaming-device-profiles' }
roaming-sessions = { default-features = false, package = 'roaming-sessions', path = '../pallets/roaming/roaming-sessions' }
roaming-billing-policies = { default-features = false, package = 'roaming-billing-policies', path = '../pallets/roaming/roaming-billing-policies' }
roaming-charging-policies = { default-features = false, package = 'roaming-charging-policies', path = '../pallets/roaming/roaming-charging-policies' }
roaming-packet-bundles = { default-features = false, package = 'roaming-packet-bundles', path = '../pallets/roaming/roaming-packet-bundles' }
membership-supernodes = { default_features = false, package = 'membership-supernodes', path = '../pallets/membership/supernodes' }
mining-setting-token = { default-features = false, package = 'mining-setting-token', path = '../pallets/mining/setting/token' }
mining-setting-hardware = { default-features = false, package = 'mining-setting-hardware', path = '../pallets/mining/setting/hardware' }
mining-rates-token = { default-features = false, package = 'mining-rates-token', path = '../pallets/mining/rates/token' }
mining-rates-hardware = { default-features = false, package = 'mining-rates-hardware', path = '../pallets/mining/rates/hardware' }
mining-sampling-token = { default-features = false, package = 'mining-sampling-token', path = '../pallets/mining/sampling/token' }
mining-sampling-hardware = { default-features = false, package = 'mining-sampling-hardware', path = '../pallets/mining/sampling/hardware' }
mining-eligibility-token = { default-features = false, package = 'mining-eligibility-token', path = '../pallets/mining/eligibility/token' }
mining-eligibility-hardware = { default-features = false, package = 'mining-eligibility-hardware', path = '../pallets/mining/eligibility/hardware' }
mining-eligibility-proxy = { default_features = false, package = 'mining-eligibility-proxy', path = '../pallets/mining/eligibility/proxy' }
mining-claims-token = { default-features = false, package = 'mining-claims-token', path = '../pallets/mining/claims/token' }
mining-claims-hardware = { default-features = false, package = 'mining-claims-hardware', path = '../pallets/mining/claims/hardware' }
mining-execution-token = { default-features = false, package = 'mining-execution-token', path = '../pallets/mining/execution/token' }
exchange-rate = { default-features = false, package = 'exchange-rate', path = '../pallets/exchange-rate' }

[features]
default = ['std']
with-tracing = ['frame-executive/with-tracing']
std = [
    'chrono/std',
    'codec/std',
    'scale-info/std',
    'log/std',
    'serde',
    'sp-api/std',
    'sp-authority-discovery/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-transaction-storage-proof/std',
    'sp-version/std',
    'sp-npos-elections/std',
    'module-primitives/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'frame-election-provider-support/std',
    'pallet-authorship/std',
    'pallet-authority-discovery/std',
    'pallet-balances/std',
    'pallet-aura/std',
    'pallet-bounties/std',
    'pallet-child-bounties/std',
    'pallet-bags-list/std',
    'pallet-democracy/std',
    'pallet-grandpa/std',
    'pallet-identity/std',
    'pallet-indices/std',
    'pallet-im-online/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'pallet-election-provider-multi-phase/std',
    'pallet-membership/std',
    'pallet-multisig/std',
    'pallet-offences/std',
    'pallet-tips/std',
    'pallet-treasury/std',
    'pallet-randomness-collective-flip/std',
    'pallet-scheduler/std',
    'pallet-staking/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-utility/std',
    'roaming-operators/std',
    'roaming-networks/std',
    'roaming-organizations/std',
    'roaming-network-servers/std',
    'roaming-devices/std',
    'roaming-routing-profiles/std',
    'roaming-service-profiles/std',
    'roaming-accounting-policies/std',
    'roaming-agreement-policies/std',
    'roaming-network-profiles/std',
    'roaming-device-profiles/std',
    'roaming-sessions/std',
    'roaming-billing-policies/std',
    'roaming-charging-policies/std',
    'roaming-packet-bundles/std',
    'membership-supernodes/std',
    'mining-setting-token/std',
    'mining-setting-hardware/std',
    'mining-rates-token/std',
    'mining-rates-hardware/std',
    'mining-sampling-token/std',
    'mining-sampling-hardware/std',
    'mining-eligibility-token/std',
    'mining-eligibility-hardware/std',
    'mining-eligibility-proxy/std',
    'mining-claims-token/std',
    'mining-claims-hardware/std',
    'mining-execution-token/std',
    'exchange-rate/std',
]

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false, package = 'substrate-wasm-builder' }
