[package]
name = 'module-primitives'
version = '3.0.6'
authors = ['Laminar Developers <hello@laminar.one>', 'MXC Foundation GmbH <https://t.me/mxcfoundation>', 'Luke Schoen']
edition = '2018'

[dependencies]
serde = { version = '1.0.126', optional = true, features = ['derive'] }
codec = { version = '2.3.1', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }
bitmask = { version = '0.5.0', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '28ae4ba635527df4fdaaf9a8e8897140eaa1f59d', default-features = false }

[features]
default = ['std']
std = [
    'bitmask/std',
    'codec/std',
    'scale-info/std',
    'serde',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
]
