[package]
name = "account-set"
version = "2.0.0"
edition = "2021"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A trait that supplies a set of accounts for use in a Substrate runtime"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"trait",
	"accounts",
	"recipe",
]
compatibility_version = "2.0.0"

[features]
default = ['std']
std = [
	'sp-std/std',
]

[dependencies]
# Substrate packages
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '0063f74287d29ff347121fcd23a00f1d8b1e4a57', default-features = false }
