[package]
name = "lockdrop-rpc"
version = "0.1.0"
authors = ["Ilya Beregovskiy"]
edition = "2021"

[dependencies]
web3 = "0.13.0"
codec = { version = '2.3.1', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = 'abca10f32a1844d4d05884c92ea2e08b17c6b8c3', default-features = false }

log = { version = '0.4.8' }
serde = { version = '1.0.126', optional = true, features = ['derive'] }

[dev-dependencies]
