[package]
name = "lockdrop-runtime-api"
version = "0.1.0"
authors = ['Ilya Beregovskiy']
edition = "2021"

[dependencies]
sp-api = { git = 'https://github.com/paritytech/substrate', rev = '0ac1a00c54a65416ed44e4c779f1483e32355130', default-features = false}

[features]
default = ["std"]
std = [
	"sp-api/std",
]
