[package]
name = "lockdrop-runtime-api"
version = "0.1.0"
authors = ['Ilya Beregovskiy']
edition = "2021"

[dependencies]
sp-api = { git = 'https://github.com/paritytech/substrate', rev = '7e643ceabf11858cd3c059579ab45794793f2a78', default-features = false}

[features]
default = ["std"]
std = [
	"sp-api/std",
]
