[package]
name = "lockdrop"
version = "0.1.0"
authors = ["Ilya Beregovskiy"]
edition = "2021"

[dependencies]
sp-std = { git = 'https://github.com/paritytech/substrate', rev = 'dfe52f7de12a7e308c0bc3a25e211b9cc4d61871', default-features = false }

[features]
default = ['std']
std = [
    'sp-std/std',
]
