[package]
name = "lockdrop"
version = "0.1.0"
authors = ["Ilya Beregovskiy"]
edition = "2021"

[dependencies]
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '27b8806ed82844bb5283a4dadf853ee518fd042f', default-features = false }

[features]
default = ['std']
std = [
    'sp-std/std',
]
