[package]
name = "membership-supernodes"
version = "2.0.0"
edition = "2018"
repository = 'https://github.com/substrate-developer-hub/recipes'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = "Fork of Substrate Recipe pallet vec-set. A pallet that implements a storage Set on top of a Vec"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0"

[dependencies]
codec = { version = '2.2.0', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }

# Substrate packages
frame-support = { git = 'https://github.com/paritytech/substrate', rev = 'a41578d5d27c56f2843d5e513d007e891d0b4129', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = 'a41578d5d27c56f2843d5e513d007e891d0b4129', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = 'a41578d5d27c56f2843d5e513d007e891d0b4129', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = 'a41578d5d27c56f2843d5e513d007e891d0b4129', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = 'a41578d5d27c56f2843d5e513d007e891d0b4129', default-features = false }

# local packages
account-set = { path = '../../../traits/account-set', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', rev = 'a41578d5d27c56f2843d5e513d007e891d0b4129', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = 'a41578d5d27c56f2843d5e513d007e891d0b4129', default-features = false }

[features]
default = ['std']
std = [
    'account-set/std',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'sp-runtime/std',
]
